--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
 
   <!-- Musik dari GitHub -->
   <audio autoplay loop>
-    <source src="https://github.com/ghazyal/ed-photograph/raw/refs/heads/main/Ed%20Sheeran%20-%20Photograph%20(Official%20Lyric%20Video)_2.mp3" type="audio/mpeg">
+    <source src="https://ghazyal.github.io/loveletter/music.mp3" type="audio/mpeg">
     Browser ayaang tidak mendukung audio.
   </audio>
 
